endurecimiento del backend
